# learner

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 3209a09be20e_create_languages_table.py  bb60aa0d3239_initial_migration.py
src/api/controllers/: __init__.py  health.py  language.py
src/api/entities/: __init__.py  base.py  language.py
src/api/services/: language_service.py
src/core/: config.py
src/db/: __init__.py  engine.py
