[tool.poetry]
name = "learner"
version = "0.1.0"
description = "FastAPI Hello World Application"
authors = ["dineshkota3"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
