[tool.poetry]
name = "learner"
version = "0.1.0"
description = "FastAPI Hello World Application"
authors = ["dineshkota3"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
psycopg = {extras = ["pool", "binary"], version = "^3.2.0"}
alembic = "^1.14.0"
pydantic-settings = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
